<resources>
	<string name="app_name">Gatekeeper</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_confirm_password">Confirm password</string>

    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_create_new_account">Create a new account</string>
    <string name="action_create_account">Create account</string>

    <string name="progress_initializing_app">Initializing application&#8230;</string>

    <string name="error_field_required">This field is required</string>
    <string name="error_failed_to_initialize_client">Failed to initialize client</string>
    <string name="error_password_not_match">Password does not match</string>
    <string name="error_invalid_password">Password is invalid</string>
    <string name="error_invalid_email">Email is invalid</string>
</resources>
